updated js and html

--- a/quiz2/Flight.html
+++ b/quiz2/Flight.html
@@ -15,20 +15,22 @@
 <p>
 <label> Flight Number </label> 
 <input type="text" id="flight" name="flightnumber" value=""/>
+</p>
+<p>
 <label> Fight Miles</label>
 <input type="text" id ="miles" name="flightmiles"/> <br/>
 
 </p>
 
 <p>
-<input type="button" id= "record" name="record" value="Record" onclick="recordFlight(); table()";  />
+<input type="button" id= "record" name="record" value="Record" onclick="recordFlight(); myTable(); calculateMembership();"  />
 </p>
 	</div>
 </section>
 
 <section>
 	<header>
-  		<h2>  Miles FLown Details </h2>
+  		<h2>  Miles Flown Details </h2>
 </header>
 	<div id ="flyingmiles">
 	 
