--- a/quiz2/Flight.html
+++ b/quiz2/Flight.html
@@ -2,6 +2,17 @@
 <html>
 <head>
 	<title> AirFlight Miles</title>
+<style>
+		input{margin:2px;}
+		h1{border-bottom:1px solid black;}
+		td{padding:10px;}
+		th{padding-right:20px;}
+		table{border:1px solid red;}
+		#msg{color:red;}
+		#result{display:flex;}
+
+	</style>
+
 <script type="text/javascript" src ="flight.js"></script>
 </head>
 <body>
